--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -55,6 +55,7 @@
     "react-google-maps": "^9.4.5",
     "react-pure-render": "^1.0.2",
     "react-router-dom": "^5.1.2",
+    "react-sidebar": "^3.0.2",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
