--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -42,7 +42,7 @@
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.6.4",
+    "pnp-webpack-plugin": "^1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
@@ -56,7 +56,7 @@
     "react-pure-render": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-sidebar": "^3.0.2",
-    "resolve": "1.15.0",
+    "resolve": "^1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
@@ -65,7 +65,7 @@
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
-    "webpack": "4.42.0",
+    "webpack": "^4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
