--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -71,7 +71,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "PORT=5001 node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
